k8s/apps/website-rs/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-rs-main
  labels:
    app.kubernetes.io/name: website-rs
    app.kubernetes.io/instance: base
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: website-rs
      app.kubernetes.io/component: main
  template:
    metadata:
      labels:
        app.kubernetes.io/name: website-rs
        app.kubernetes.io/instance: base
        app.kubernetes.io/component: main
    spec:
      containers:
        - name: website-rs-main
          image: "docker.io/dwbrite/dwbrite-com:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 41234
              protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-rs-media
  labels:
    app.kubernetes.io/name: website-rs
    app.kubernetes.io/instance: base
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: website-rs
      app.kubernetes.io/component: media  # for website-rs-media
  template:
    metadata:
      labels:
        app.kubernetes.io/name: website-rs
        app.kubernetes.io/instance: base
        app.kubernetes.io/component: media  # for website-rs-media
    spec:
      containers:
        - name: website-rs-media
          image: "docker.io/dwbrite/media-dwbrite-com:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 41233
              protocol: TCP
