k8s/apps/website-rs/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: website-rs-main
  labels:
    app.kubernetes.io/name: website-rs
    app.kubernetes.io/component: main
spec:
  selector:
    app.kubernetes.io/name: website-rs
    app.kubernetes.io/component: main
  ports:
    - port: 80
      targetPort: 41234

---
apiVersion: v1
kind: Service
metadata:
  name: website-rs-media
  labels:
    app.kubernetes.io/name: website-rs
    app.kubernetes.io/component: media
spec:
  ports:
    - port: 80
      targetPort: 41233
  selector:
    app.kubernetes.io/name: website-rs
    app.kubernetes.io/component: media
